# elevenlabs-ai

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: aws.yml
deploy/: Dockerfile  docker-compose.yml
src/: config.py  demo.py
src/api/: app.py  chat.py  tools.py
src/client/: agents.py  conversation.py  phone_numbers.py  pronunciation.py  tools.py  voice.py
src/prompts/: system_prompt.md  system_prompt_v1.md
src/prompts/booking/: system_prompt.md  system_prompt_action.md  system_prompt_action_v1.md  system_prompt_consent.md
src/prompts/consent_agent/: system_prompt.md
src/utils/: logging_config.py  prompt_utils.py
